# tier_s_app

./: .gitignore  .txt  docker-compose.yml  readme.md  tasks.txt
.github/workflows/: api-workflow.yml  worker-workflow.yml
_audio/: av_test_iphone.m4a
api/: .env  Dockerfile  Makefile  app.py  app_logging.py  broadcaster.py  config.py  db.py  minio.py  models.py  pyproject.toml  redis_client.py  schemas.py  utils.py  websocket_broadcast.py
api/clients/: __init__.py  db_client.py  minio_client.py  temporal_client.py
api/db_models/: Result.py  Task.py  __init__.py  result.py  task.py  workflow.py  workflow_result.py
api/repository/: MinioRepo.py  ResultRepo.py  TaskRepo.py  TemporalRepo.py  __init__.py  dataset_repository.py  db_repo.py  minio_repo.py
api/services/: DbService.py  MinioService.py  WebsocketService.py  WorkflowService.py  __init__.py  minio_service.py  websocket_data.py  workflow_service.py
api/tests/: base_test.py
audio_converter_service/: Dockerfile  config.py  file_repository.py  file_service.py  main.py  model.py  pyproject.toml
audio_to_text_service/: Dockerfile  Dockerfile_cuda  README.md  check_cuda.py  convert_dataset.py  file_repository.py  file_service.py  interface.py  main.py  model.py  prepare_dataset.py  pyproject.toml  requirements.txt  step2.py
audio_to_text_service/model/: check_cuda.py  check_lora.py  interface.py  train.py  transcripts.csv
audio_to_text_service/whisper-small-lora-ru/: README.md  adapter_config.json
frontend/: .gitignore  README.md  docker-compose.yml  frontend.rar  nuxt.config.ts  package-lock.json  package.json
frontend/src/: app.vue
frontend/src/assets/styles/: index.less  nuxt-ui.css  reset.less
frontend/src/components/pages/Index/: Index.vue
frontend/src/components/shared/modals/lib/: stdEvents.ts
frontend/src/components/shared/ui/FileInput/: FileInput.vue
frontend/src/components/widgets/Header/: Header.vue
frontend/src/components/widgets/RecoveryApp/: RecoveryApp.vue
frontend/src/components/widgets/RecoveryApp/model/types/: types.ts
frontend/src/components/widgets/RecoveryApp/ui/: AudioFileLoader.vue  AudioRecorder.vue  TaskEntity.vue
frontend/src/domain/app/: provider.vue
frontend/src/domain/app/model/store/: store.ts
frontend/src/domain/recoveryService/: index.ts  provider.vue
frontend/src/domain/recoveryService/api/: deleteWorkflow.ts  fetchWorkflows.ts  uploadWorkflow.ts
frontend/src/domain/recoveryService/hooks/: broadcast.ts  handleTaskEventMessage.ts  loadWorflows.ts  removeWorkflow.ts  task.ts
frontend/src/domain/recoveryService/model/store/: task.ts
frontend/src/domain/recoveryService/model/types/: task.ts  workflow.ts  workflow_event.ts
infra/nginx/: nginx.conf
services/audio_converter/: readme.txt
text_better_service/: model.py  step3.py
text_to_audio_service/: Dockerfile  dubber.py  file_repository.py  file_service.py  main.py  model.py  pyproject.toml  requirements.txt  schemas.py  step4.py
worker/: Dockerfile  bar_workflow.py  config.py  convert.py  db.py  db_init.py  foo_activity.py  main.py  models.py  pyproject.toml  redis_client.py  run_worker.py  schemas.py  shared.py  workflow_def.py
worker/activities/: __init__.py  convertion_act.py  database_act.py  db_act.py  dubb_act.py  text_act.py
worker/activities/Convert/: convert.py  step1.py
worker/activities/Model1/: model1.py  step2.py
worker/activities/Model2/: model.py  model2.py  step3.py
worker/activities/Model3/: model.py  model3.py
worker/clients/: db_client.py  minio_client.py  redis_client.py
worker/db_models/: workflow.py  workflow_result.py
worker/repository/: db_repo.py  minio_repo.py
worker/services/: minio_service.py  redis_service.py
worker/tests/: base_test.py
