[tool.poetry]
name = "tier_s_app"
version = "0.0.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.27"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.29"
httpx = "^0.27"
temporalio = "^1.3"
aiobotocore = "^2.22.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"