[tool.poetry]
name = "tier_s_app"
version = "0.0.1"
description = "FastAPI-based application service for project"
authors = ["Max Pogrebnykh <pogrebnykh.max@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.27"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
websockets = "^15.0.1"
redis = "^6.1.0"
httpx = "^0.27"
temporalio = "^1.3"
aiobotocore = "^2.22.0"
python-dotenv = "^1.1.0"
mypy = "^1.15.0"
black = "^25.1.0"
loguru = "^0.7.3"
isort = "^6.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.11.9"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

