[tool.poetry]
name = "audio-converter-service"
version = "0.1.0"
description = ""
authors = ["Renev Artemiy <renevartemiy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
