[tool.poetry]
name = "audio-to-text-service"
version = "0.1.0"
description = ""
authors = ["Renev Artemiy <renevartemiy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.113.0"}
httpx = "^0.28.1"
uvicorn = "^0.34.2"

# peft = {extras = ["all"], version = "^0.13.0"}
peft = "^0.13.0"
transformers = "^4.41.2"
torch = {extras = ["all"], version = "^2.7.0"}
torchaudio = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
