[tool.poetry]
name = "tier_s_worker"
version = "0.0.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
temporalio = "^1.8.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"