[tool.poetry]
name = "tier_s_worker"
version = "0.0.1"
description = "Background worker service for project"
authors = ["Max Pogrebnykh <pogrebnykh.max@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
temporalio = "^1.8.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.29"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.11.9"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
